--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/foodcategory.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/foodcategory.xml
@@ -1,174 +1,254 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:columnCount="4">
+    android:layout_height="match_parent">
 
-
-    <Button
-        android:id="@+id/지역명물"
+    <LinearLayout
+        android:id="@+id/main_layout"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:text="지역 명물 image"
-        android:layout_rowSpan="2"
-        android:layout_columnSpan="4" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginBottom="?attr/actionBarSize"
+        tools:ignore="MissingConstraints">
+        <!--  어떻게 하면 Layout끼리 겹치지 않게 할 수 있을까?-->
 
-    <Button
-        android:id="@+id/like1_button"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:text="#취향1"
-        android:layout_rowSpan="1"
-        android:layout_columnSpan="1"
-        android:background="@drawable/likely_design"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            >
 
-    <Button
-        android:id="@+id/like2_button"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:text="#취향2"
-        android:layout_rowSpan="1"
-        android:layout_columnSpan="1"
-        android:background="@drawable/likely_design"/>
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="지역 명물 image" />
 
-    <Button
-        android:id="@+id/like3_button"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:text="#취향3"
-        android:layout_rowSpan="1"
-        android:layout_columnSpan="2"
-        android:background="@drawable/likely_design"/>
-
-    <ImageButton
-        android:id="@+id/pizza"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/pizza_icon_text"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/pizza2"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/pizza_icon"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/cola"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/c"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/egg"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/e"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/pizza3"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/pizza_icon"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/pizza4"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/pizza_icon"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/cola2"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/c"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/egg2"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/e"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/pizza5"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/pizza_icon"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/pizza6"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/pizza_icon"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/cola3"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/c"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/egg3"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/e"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/pizza7"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/pizza_icon"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/pizza8"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/pizza_icon"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/cola4"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/c"
-        android:background="@android:color/transparent"/>
-
-    <ImageButton
-        android:id="@+id/egg4"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/e"
-        android:background="@android:color/transparent"/>
+        </LinearLayout>
 
 
-</GridLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:weightSum="5">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:columnCount="3"
+                android:rowCount="1"
+                android:layout_marginTop="25dp">
+
+                <Button
+                    android:id="@+id/btn_taste1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:text="#취향1"
+                    android:textColor="@color/white"
+                    android:layout_marginRight="15dp"
+                    android:background="@drawable/likely_design"/>
+
+                <Button
+                    android:id="@+id/btn_taste2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:text="#취향2"
+                    android:textColor="@color/white"
+                    android:layout_marginRight="15dp"
+                    android:background="@drawable/likely_design"/>
+
+                <Button
+                    android:id="@+id/btn_taste3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:text="#취향3"
+                    android:textColor="@color/white"
+                    android:background="@drawable/likely_design"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                >
+
+                <ImageButton
+                    android:id="@+id/pizza1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/pizza_icon" />
+
+                <ImageButton
+                    android:id="@+id/pizza2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/pizza_icon" />
+
+                <ImageButton
+                    android:id="@+id/cola1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/c" />
+
+                <ImageButton
+                    android:id="@+id/egg1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/e" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                >
+
+                <ImageButton
+                    android:id="@+id/pizza3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/pizza_icon" />
+
+                <ImageButton
+                    android:id="@+id/pizza4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/pizza_icon" />
+
+                <ImageButton
+                    android:id="@+id/cola2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/c" />
+
+                <ImageButton
+                    android:id="@+id/egg2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/e" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                >
+
+                <ImageButton
+                    android:id="@+id/pizza5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/pizza_icon" />
+
+                <ImageButton
+                    android:id="@+id/pizza6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/pizza_icon" />
+
+                <ImageButton
+                    android:id="@+id/cola3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/c" />
+
+                <ImageButton
+                    android:id="@+id/egg3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/e" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                >
+
+                <ImageButton
+                    android:id="@+id/pizza7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/pizza_icon" />
+
+                <ImageButton
+                    android:id="@+id/pizza8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/pizza_icon" />
+
+                <ImageButton
+                    android:id="@+id/cola4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/c" />
+
+                <ImageButton
+                    android:id="@+id/egg4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/e" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
