--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/main_category.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/main_category.xml
@@ -23,40 +23,21 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:paddingBottom="10dp"
                 android:layout_marginTop="25dp">
 
-                <Button
-                    android:id="@+id/btn_taste1"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:text="#취향1"
-                    android:textColor="@color/white"
-                    android:layout_marginRight="15dp"
-                    android:background="@drawable/likely_design"/>
+                    android:text="당신의 취향을 골라보세요!!"
+                    android:textColor="@color/main_color"
+                    android:textSize="30dp"
+                    android:gravity="center_horizontal"/>
 
-                <Button
-                    android:id="@+id/btn_taste2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_weight="1"
-                    android:text="#취향2"
-                    android:textColor="@color/white"
-                    android:layout_marginRight="15dp"
-                    android:background="@drawable/likely_design"/>
-
-                <Button
-                    android:id="@+id/btn_taste3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_weight="1"
-                    android:text="#취향3"
-                    android:textColor="@color/white"
-                    android:background="@drawable/likely_design"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -77,7 +58,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:onClick="btnclick">
             </androidx.recyclerview.widget.RecyclerView>
                 <TextView
                     android:paddingTop="10dp"
